Lecture 07 Initial Push

--- a/Lecture05/Makefile
+++ b/Lecture05/Makefile
@@ -1,143 +1,141 @@
 # Author: Matthew Morrison
 # E-mail: matt.morrison@nd.edu
 #
-# This is the Makefile for Lecture 03 - Part 1
+# This is the Makefile for the CSE 24312 course Lecture 05 - Part 2
 
 # G++ is for the GCC compiler for C++
 PP := g++
 
-# CFLAGS are the compiler flages for when we compile C code in this course
-FLAGS := -O0 -g -Wall -Wextra -Wconversion -Wshadow -pedantic -Werror -lm
-CXXFLAGS := -m64 -std=c++11 -Weffc++ $(FLAGS)
+# Original Compiler Flags brought back for tempVoidNode only 
+OLDFLAGS := -O0 -g -Wall
+OLDCXXFLAGS := -m64 -std=c++11 $(OLDFLAGS)
+
+# CXXFLAGS are the compiler flages for when we compile C++ code in this course 
+FLAGS := -O0 -g -Wall -Wextra -Wconversion -Wshadow -pedantic -Werror 
+CXXFLAGS := -m64 -std=c++11 -Weffc++ $(FLAGS) 
 
 
-# passBy Example - Pass By Reference
-# Command: make passBy
-passByObjs :=  passBy.o
-
-passBy: passBy.o
-	$(PP) $(CXXFLAGS) -o passBy $(passByObjs)
-	./passBy
-
-passBy.o: passBy.cpp
-	$(PP) $(CXXFLAGS) -c passBy.cpp	
+INC := include
+SRC := src
+OBJ := obj
+EXE := exe
 
 
-# callBy Example - Call By Reference
-# Command: make callBy
-callByObjs :=  callBy.o
+# Command: make tempVoidNode
+# Shows allocating templated generic types on the heap
+# using imperative and procedural programming
 
-callBy: callBy.o
-	$(PP) $(CXXFLAGS) -o callBy $(callByObjs)
-	./callBy
+tempVoidNodeObjs := $(OBJ)/tempVoidNode.o
 
-callBy.o: callBy.cpp
-	$(PP) $(CXXFLAGS) -c callBy.cpp	
+tempVoidNode: $(tempVoidNodeObjs)
+	$(PP) $(OLDCXXFLAGS) -o $(EXE)/tempVoidNode $(tempVoidNodeObjs)
+	$(EXE)/./tempVoidNode
 
-
-# helloCmdLine Example - Shows how char** is structured
-# Command: make helloCmdLine
-helloCmdLineObjs :=  helloCmdLine.o
-
-helloCmdLine: helloCmdLine.o
-	$(PP) $(CXXFLAGS) -o helloCmdLine $(helloCmdLineObjs)
-	./helloCmdLine Hello, World!
-
-helloCmdLine.o: helloCmdLine.cpp
-	$(PP) $(CXXFLAGS) -c helloCmdLine.cpp	
-
-
-# array Example - Show how to call an array
-# Command: make array
-arrayObjs :=  array.o
-
-array: array.o
-	$(PP) $(CXXFLAGS) -o array $(arrayObjs)
-	./array
-
-array.o: array.cpp
-	$(PP) $(CXXFLAGS) -c array.cpp	
-
-
-# array2 Example - When the length is not known
-# Command: make array
-array2Objs :=  array2.o
-
-array2: array2.o
-	$(PP) $(CXXFLAGS) -o array2 $(array2Objs)
-	./array2
-
-array2.o: array2.cpp
-	$(PP) $(CXXFLAGS) -c array2.cpp	
-
-
-# procMatrix Example - MxN matrix in arrays
-# Command: make procMatrix
-procMatrixObjs :=  procMatrix.o
-
-procMatrix: procMatrix.o
-	$(PP) $(CXXFLAGS) -o procMatrix $(procMatrixObjs)
-	./procMatrix
-
-procMatrix.o: procMatrix.cpp
-	$(PP) $(CXXFLAGS) -c procMatrix.cpp
+$(OBJ)/tempVoidNode.o: $(SRC)/tempVoidNode.cpp
+	$(PP) $(OLDCXXFLAGS) -c $(SRC)/tempVoidNode.cpp -o $@
 
 
 
-# matrix Example - MxN matrix in arrays
-# Command: make matrix
-matrixObjs :=  matrix.o
+# Command: make tempVoidNode2
+# Shows allocating templated generic types on the heap
+# using imperative and procedural programming
+# Uses proper casting of float
 
-matrix: matrix.o
-	$(PP) $(CXXFLAGS) -o matrix $(matrixObjs)
-	./matrix
+tempVoidNode2Objs := $(OBJ)/tempVoidNode2.o
 
-matrix.o: matrix.cpp
-	$(PP) $(CXXFLAGS) -c matrix.cpp	
+tempVoidNode2: $(tempVoidNode2Objs)
+	$(PP) $(OLDCXXFLAGS) -o $(EXE)/tempVoidNode2 $(tempVoidNode2Objs)
+	$(EXE)/./tempVoidNode2
+
+$(OBJ)/tempVoidNode2.o: $(SRC)/tempVoidNode2.cpp
+	$(PP) $(OLDCXXFLAGS) -c $(SRC)/tempVoidNode2.cpp -o $@
 
 
-# Pascal's Triangle Example
-# Command: make pascal
-pascalTestObjs := pascalTest.o pascal.o
 
-pascalTest: $(pascalTestObjs)
-	$(PP) $(CXXFLAGS) -o pascalTest $(pascalTestObjs)
-	./pascalTest
+# Command: make template1
+# Simple templated class example
 
-pascalTest.o: pascalTest.cpp pascal.h
-	$(PP) $(CXXFLAGS) -c pascalTest.cpp
+template1Objs := $(OBJ)/template1.o
 
-pascal.o: pascal.cpp pascal.h
-	$(PP) $(CXXFLAGS) -c pascal.cpp	
+template1: $(template1Objs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/template1 $(template1Objs)
+	$(EXE)/./template1
+
+$(OBJ)/template1.o: $(SRC)/template1.cpp $(INC)/A_1.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/template1.cpp -o $@
+	
+
+# Command: make tempTest
+# Simple templated class example
+
+tempTestObjs := $(OBJ)/tempTest.o
+
+tempTest: $(tempTestObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/tempTest $(tempTestObjs)
+	$(EXE)/./tempTest
+
+
+$(OBJ)/tempTest.o: $(SRC)/tempTest.cpp $(INC)/A.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/tempTest.cpp -o $@
+
+
+	
+
+# Command: make classBad
+# Example of Pitfall of splitting templated classes into cpp and h
+# Contains deliberate compiler errors
+
+classBadObjs := $(OBJ)/classBad.o $(OBJ)/Abad.o
+
+classBad: $(classBadObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/classBad $(classBadObjs)
+	$(EXE)/./classBad
+
+$(OBJ)/classBad.o: $(SRC)/classBad.cpp $(INC)/Abad.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/classBad.cpp -o $@
+	
+$(OBJ)/Abad.o: $(INC)/Abad.cpp $(INC)/Abad.h
+	$(PP) $(CXXFLAGS) -c $(INC)/Abad.cpp -o $@
 	
 	
-# rmq1 Example - Range Minimum Query in n^2 preprocessing
-# Command: make rmq1
-rmq1Objs :=  rmq1.o
+	
+# Command: make tempBad
+# Example of Pitfall of splitting bad templating
+# Contains deliberate compiler errors
 
-rmq1: rmq1.o
-	$(PP) $(CXXFLAGS) -o rmq1 $(rmq1Objs)
-	./rmq1
+tempBadObjs := $(OBJ)/tempBad.o
 
-rmq1.o: rmq1.cpp
-	$(PP) $(CXXFLAGS) -c rmq1.cpp
+tempBad: $(tempBadObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/tempBad $(tempBadObjs)
+	$(EXE)/./tempBad
+
+$(OBJ)/tempBad.o: $(SRC)/tempBad.cpp $(INC)/A.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/tempBad.cpp -o $@
 	
 	
-# rmq2 Example - Range Minimum Query with Sparse Matrix
-# Command: make rmq2
-rmq2Objs :=  rmq2.o
 
-rmq2: rmq2.o
-	$(PP) $(CXXFLAGS) -o rmq2 $(rmq2Objs)
-	./rmq2
 
-rmq2.o: rmq2.cpp
-	$(PP) $(CXXFLAGS) -c rmq2.cpp
-	
+# Command: make DynArrTest
+# Initial Abstract Data Type class
+
+DynArrTestObjs := $(OBJ)/DynArrTest.o
+
+DynArrTest: $(DynArrTestObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/DynArrTest $(DynArrTestObjs)
+
+$(OBJ)/DynArrTest.o: $(SRC)/DynArrTest.cpp $(INC)/DynArr.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/DynArrTest.cpp -o $@
+
+
+# make initialize
+# Will be called by grader to initialize your objects and executables folders
+initialize: 
+	mkdir objects executables
+
 
 # Make all
-all: passBy callBy helloCmdLine array array2 procMartix pascal matrix rmq1 rmq2
+all: tempDest DynArrTest
 
 # Make clean
 clean :
-	rm -rf *.o passBy callBy helloCmdLine array array2 procMartix matrix pascal rmq1 rmq2
+	rm -rf *.o $(OBJ)/* $(EXE)/*
