Lab 1 Initial Upload

--- a/Lab01/Makefile
+++ b/Lab01/Makefile
@@ -19,11 +19,11 @@ PQCXX    := -m64 -std=c++11 -Weffc++ $(PQCFLAGS)
 namespaceObjs :=  namespace.o
 
 namespace: namespace.o
-	$(PP) $(CXXFLAGS) -o namespace $(namespaceObjs)
+	$(PP) $(PQCXX) -o namespace $(namespaceObjs)
 	./namespace
 
 namespace.o: namespace.cpp
-	$(PP) $(CXXFLAGS) -c namespace.cpp
+	$(PP) $(PQCXX) -c namespace.cpp
 	
 	
 	
@@ -32,11 +32,11 @@ namespace.o: namespace.cpp
 nameGoodObjs :=  nameGood.o
 
 nameGood: nameGood.o
-	$(PP) $(CXXFLAGS) -o nameGood $(nameGoodObjs)
+	$(PP) $(PQCXX) -o nameGood $(nameGoodObjs)
 	./nameGood
 
 nameGood.o: nameGood.cpp
-	$(PP) $(CXXFLAGS) -c nameGood.cpp
+	$(PP) $(PQCXX) -c nameGood.cpp
 
 
 # nameGood2 Example
@@ -44,180 +44,40 @@ nameGood.o: nameGood.cpp
 nameGood2Objs :=  nameGood2.o
 
 nameGood2: nameGood2.o
-	$(PP) $(CXXFLAGS) -o nameGood2 $(nameGood2Objs)
+	$(PP) $(PQCXX) -o nameGood2 $(nameGood2Objs)
 	./nameGood2
 
 nameGood2.o: nameGood2.cpp
-	$(PP) $(CXXFLAGS) -c nameGood2.cpp
-
-
-
-# voidTypes Example
-# Command: make voidTypes
-voidTypesObjs :=  voidTypes.o
-
-voidTypes: voidTypes.o
-	$(PP) $(CXXFLAGS) -o voidTypes $(voidTypesObjs)
-	./voidTypes
-
-voidTypes.o: voidTypes.cpp
-	$(PP) $(CXXFLAGS) -c voidTypes.cpp
-
-
-# voidTypes2 Example
-# Command: make voidTypes2
-voidTypes2Objs :=  voidTypes2.o
-
-voidTypes2: voidTypes2.o
-	$(PP) $(CXXFLAGS) -o voidTypes2 $(voidTypes2Objs)
-	./voidTypes2
-
-voidTypes2.o: voidTypes2.cpp
-	$(PP) $(CXXFLAGS) -c voidTypes2.cpp
-
-
-
-# voidTypes3 Example
-# Command: make voidTypes3
-voidTypes3Objs :=  voidTypes3.o
-
-voidTypes3: voidTypes3.o
-	$(PP) $(CXXFLAGS) -o voidTypes3 $(voidTypes3Objs)
-	./voidTypes3
-
-voidTypes3.o: voidTypes3.cpp
-	$(PP) $(CXXFLAGS) -c voidTypes3.cpp
+	$(PP) $(PQCXX) -c nameGood2.cpp
 	
 	
+# cin Example
+# Command: make cin
+cinObjs :=  cin.o
 
-# voidNode Example
-# Command: make voidNode
-voidNodeObjs :=  voidNode.o
+cin: cin.o
+	$(PP) $(PQCXX) -o cin $(cinObjs)
+	./cin
 
-voidNode: voidNode.o
-	$(PP) $(CXXFLAGS) -o voidNode $(voidNodeObjs)
-	./voidNode
-
-voidNode.o: voidNode.cpp
-	$(PP) $(CXXFLAGS) -c voidNode.cpp
-	
-	
-	
-# voidNodeBad Example
-# Command: make voidNodeBad
-voidNodeBadObjs :=  voidNodeBad.o
-
-voidNodeBad: voidNodeBad.o
-	$(PP) $(CXXFLAGS) -o voidNodeBad $(voidNodeBadObjs)
-	./voidNodeBad
-
-voidNodeBad.o: voidNodeBad.cpp
-	$(PP) $(CXXFLAGS) -c voidNodeBad.cpp
+cin.o: cin.cpp
+	$(PP) $(PQCXX) -c cin.cpp
 
 
+# cinStr Example
+# Command: make cinStr
+cinStrObjs :=  cinStr.o
 
-# voidNodeBad2 Example
-# Command: make voidNodeBad2
-voidNodeBad2Objs :=  voidNodeBad2.o
+cinStr: cinStr.o
+	$(PP) $(PQCXX) -o cinStr $(cinStrObjs)
+	./cinStr
 
-voidNodeBad2: voidNodeBad2.o
-	$(PP) $(CXXFLAGS) -o voidNodeBad2 $(voidNodeBad2Objs)
-	./voidNodeBad2
-
-voidNodeBad2.o: voidNodeBad2.cpp
-	$(PP) $(CXXFLAGS) -c voidNodeBad2.cpp
-	
-
-
-# structNode Example
-# Command: make structNode
-structNodeObjs :=  structNode.o
-
-structNode: structNode.o
-	$(PP) $(CXXFLAGS) -o structNode $(structNodeObjs)
-	./structNode
-
-structNode.o: structNode.cpp
-	$(PP) $(CXXFLAGS) -c structNode.cpp
-
-
-# structSimple Example
-# Command: make structSimple
-structSimpleObjs :=  structSimple.o
-
-structSimple: structSimple.o
-	$(PP) $(CXXFLAGS) -o structSimple $(structSimpleObjs)
-	./structSimple
-
-structSimple.o: structSimple.cpp
-	$(PP) $(CXXFLAGS) -c structSimple.cpp
-	
-
-	
-# structMod Example
-# Command: make structMod
-structModObjs :=  structMod.o
-
-structMod: structMod.o
-	$(PP) $(CXXFLAGS) -o structMod $(structModObjs)
-	./structMod
-
-structMod.o: structMod.cpp
-	$(PP) $(CXXFLAGS) -c structMod.cpp
-
-
-# classNode Example
-# Command: make classNode
-classNodeObjs :=  classNode.o
-
-classNode: classNode.o
-	$(PP) $(CXXFLAGS) -o classNode $(classNodeObjs)
-	./classNode
-
-classNode.o: classNode.cpp
-	$(PP) $(CXXFLAGS) -c classNode.cpp
-	
-	
-# classMod Example
-# Command: make classMod
-classModObjs :=  classMod.o
-
-classMod: classMod.o
-	$(PP) $(CXXFLAGS) -o classMod $(classModObjs)
-	./classMod
-
-classMod.o: classMod.cpp
-	$(PP) $(CXXFLAGS) -c classMod.cpp
-	
-	
-# classBad Example
-# Command: make classBad
-classBadObjs :=  classBad.o
-
-classBad: classBad.o
-	$(PP) $(CXXFLAGS) -o classBad $(classBadObjs)
-	./classBad
-
-classBad.o: classBad.cpp
-	$(PP) $(CXXFLAGS) -c classBad.cpp
-	
-	
-	
-# classBadPQC Example
-# Command: make classBadPQC
-classBadPQCObjs :=  classBadPQC.o
-
-classBadPQC: classBadPQC.o
-	$(PP) $(PQCXX) -o classBadPQC $(classBadPQCObjs)
-	./classBadPQC
-
-classBadPQC.o: classBad.cpp
-	$(PP) $(PQCXX) -c classBad.cpp
+cinStr.o: cinStr.cpp
+	$(PP) $(PQCXX) -c cinStr.cpp	
 	
 
 # Make all
-all: namespace nameGood voidTypes voidTypes2 voidTypes3 voidNode voidNodeBad voidNodeBad2 structNode structSimple structMod classNode classMod classBad
+all: namespace nameGood cin cinStr
 
 # Make clean
 clean :
-	rm -rf *.o namespace nameGood nameGood2 voidTypes voidTypes2 voidTypes3 voidNode voidNodeBad voidNodeBad2 structNode structSimple structMod classNode classMod classBad
+	rm -rf *.o namespace nameGood cin cinStr
